--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,7 +12,7 @@
             {% endif %}
         {% endwith %} 
         <h1>Welcome {{name}}!</h1>
-        <a href ="https://www.google.com">notgoogle</a>
+        <a href ="www.google.com">notgoogle</a>
         <p>
         <ul>
         {% for names in city_names %}
@@ -20,7 +20,7 @@
         {% endfor %}
         </ul>
         </p>
-    <form action = "/" method="POST">
+    <formaction = "/" method="POST">
         <label>City Name       
             <br><input id="cityName" type="text" name="cityName" maxlength="32"></br>
         </label>
